--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "version": "0.0.0",
     "publisher": ".jannik",
     "icon": "icon.png",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/30jannik06/htmlsnippets"
+    },
     "engines": {
         "vscode": "^1.62.0"
     },
