--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "htmlsnippets",
     "displayName": "htmlSnippets",
     "description": "Simple Html Snipped Generator",
-    "version": "0.0.0",
+    "version": "1.0.4",
     "publisher": "jannik",
     "icon": "images/icon.png",
     "repository": {
@@ -19,15 +19,19 @@
         "snippets": [
             {
                 "language": "html",
-                "path": "./snippets/snippets.code-snippets"
+                "path": "./snippets/htmlsnippets.json"
+            },
+            {
+                "language": "html",
+                "path": "./snippets/phpsnippets.json"
             },
             {
                 "language": "javascript",
-                "path": "./snippets/snippets.code-snippets"
+                "path": "./snippets/snippets.json"
             },
             {
                 "language": "javascriptreact",
-                "path": "./snippets/snippets.code-snippets"
+                "path": "./snippets/snippets.json"
             }
         ]
     }
